--- a/builderbid-SPA/src/app/nav/nav.component.html
+++ b/builderbid-SPA/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-primary">
+<nav class="navbar navbar-expand-md navbar-dark bg-light">
   <div class="container">
       <a class="navbar-brand" [routerLink]="['/home']">Builder Bid</a>
 
