--- a/builderbid-SPA/src/app/nav/nav.component.css
+++ b/builderbid-SPA/src/app/nav/nav.component.css
@@ -2,3 +2,21 @@
     cursor: pointer;
 }
 
+img {
+    width: 5%;
+    height: auto;
+    background-color:rgba(75, 48, 22, 0.2);
+    /* margin-right: 0;
+    padding-right: 0%; */
+}
+
+#coname {
+    font-size: 1.5em;
+    margin-left: 0;
+    padding-left: 0;
+}
+
+/* .navbar {
+    background-color: ;
+} */
+
