--- a/builderbid-SPA/src/app/nav/nav.component.html
+++ b/builderbid-SPA/src/app/nav/nav.component.html
@@ -1,7 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-primary">
   <div class="container">
-      <a class="navbar-brand" [routerLink]="['/home']">Builder Bid</a>
-
+      <a id="coname" class="navbar-brand" [routerLink]="['/home']"> Builder Bid</a>
       <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" [routerLink]="['/contracts']">Contracts | Bids <span class="sr-only">(current)</span></a>
@@ -25,7 +24,12 @@
           <a class="dropdown-item" (click)="logout()"><i class="fa fa-sign-out"></i> Logout</a>
         </div>
       </div>
-  
+          <ul class="navbar-nav mr-auto">
+              <li class="nav-item" routerLinkActive="active">
+                  <a class="nav-link " [routerLink]="['/contact']">Contact</a>
+                </li>
+          </ul>
+      
       <form *ngIf="!loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
         <input class="form-control mr-sm-2" type="text" name="username" 
           placeholder="Username" required [(ngModel)]="model.username">
