--- a/builderbid-SPA/src/styles.css
+++ b/builderbid-SPA/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
-@import '../node_modules/bootswatch/dist/united/bootstrap.min.css';
+@import '../node_modules/bootswatch/dist/lux/bootstrap.min.css';
 @import '../node_modules/font-awesome/css/font-awesome.min.css';
 @import '../node_modules/alertifyjs/build/css/alertify.min.css';
 @import '../node_modules/alertifyjs/build/css/themes/bootstrap.min.css';
@@ -50,4 +50,8 @@
     border: 0;
     border-top: 1px solid #eee;
     padding: 15px 0;
+  }
+
+  .btn {
+    border-radius: 25px;
   }
